# socials

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  todo.md
.claude/: settings.json
.claude/agents/: antipattern-scanner.md  clean-code-reviewer.md  code-smell-detector.md  documentation-reviewer.md
.claude/commands/: pre-pr-check.md
.claude/skills/branch/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/pr/: SKILL.md
.github/workflows/: ci.yml
docs/: AGENTS.src.md  Architecture.md  README.md  Testing.md  Workflow.md
docs/plans/: Product.md  README.md  buffer-24h-report.md  queued-posts-report.md
scripts/: build_agent_docs.py  check_agent_docs_edit.py
socials/: __init__.py  buffer.py  cli.py  config.py  report.py
tests/: buffer_api.py  test_buffer.py  test_cli.py  test_report.py
