[project]
name = "socials"
version = "0.1.0"
description = "Reporting, alerts, and assistance for The Flip's social media volunteers"
requires-python = ">=3.14"
dependencies = [
    "click",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["socials"]

[project.scripts]
socials = "socials.cli:cli"

[dependency-groups]
dev = [
    "mypy>=1.15",
    "pre-commit>=4.2",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "S", "T20"]
ignore = ["E501", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "S105", "S106", "S107"]
# The CLI prints to the terminal — that's its user interface, not stray debug output.
"socials/cli.py" = ["T20"]
# Dev scripts are runnable CLIs: print is their progress output, and invoking `git`
# from PATH with fixed arguments is intended (not untrusted input).
"scripts/*.py" = ["T20", "S603", "S607"]

[tool.ruff.lint.isort]
known-first-party = ["socials"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.14"
warn_unused_configs = true
disable_error_code = ["import-untyped", "import-not-found"]

[tool.pytest.ini_options]
testpaths = ["tests"]
